--- a/style.css
+++ b/style.css
@@ -12,7 +12,11 @@
 body{
     background: linear-gradient(to right,rgb(57,55,55) 0,rgb(57,55,55) 50%,black 50%,black 100%);
 }
-
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button{
+    -webkit-appearance: none;
+    margin: 0;
+}
 
 
 
