--- a/style.css
+++ b/style.css
@@ -532,6 +532,16 @@ header{
     justify-content: center;
     flex-wrap: wrap;
 }
+.project .h2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    background: linear-gradient(90deg,rgb(255, 0, 0),rgb(64, 0, 255));
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    font-weight: 900;
+}
 .p-container .card{
     border: 1px solid rgba(231, 146, 146, 0.168);
     border-radius: 20px;
